# NextKey

./: .env.example  .gitignore  README.md  deep-research-report.md  pyproject.toml
configs/data/: mvp_feasibility.yaml  synthetic_v1.yaml
configs/eval/: dev_human.yaml
configs/model/: mvp_charseq_smoke.yaml  mvp_chartagger_smoke.yaml  mvp_chartagger_v1.yaml  mvp_lexicon_baseline.yaml  teacher_candidate.yaml
data/samples/: README.md  mvp-feasibility-sample.jsonl
demo/backend/: README.md
demo/frontend/: README.md
docs/: README.md
docs/00-project/: acceptance-criteria.md  mvp-feasibility-scope.md  overview.md  proposal.md  research-contract.md  roadmap.md  scope-matrix.md  task-breakdown.md  use-cases.md
docs/01-data/: annotation-guideline.md  dataset-build-plan.md  mvp-feasibility-report.md  noise-taxonomy.md  schema.md
docs/02-model/: model-selection.md  training-plan.md
docs/03-evaluation/: evaluation-plan.md  mvp-chartagger-baseline-report.md  mvp-lexicon-baseline-report.md
docs/04-system/: api-and-demo.md  system-architecture.md
docs/05-edge/: edge-plan.md
docs/06-personalization-privacy/: personalization-and-privacy.md
docs/07-operations/: repo-structure.md  risk-register.md
notebooks/: README.md
scripts/: build_dataset.py  build_mvp_splits.py  check_scaffold.py  evaluate.py  evaluate_mvp_charseq.py  evaluate_mvp_chartagger.py  evaluate_mvp_lexicon_baseline.py  export_model.py  profile_mvp_data.py  run_demo.py  train.py  train_mvp_charseq.py  train_mvp_chartagger.py  train_mvp_lexicon_baseline.py
tests/: test_cli_scaffold.py
(+14 files in other folders)
